# omak_template

./: .gitignore  pyproject.toml
src/: main.py
src/data/: results.db
