[project]
name = "omak"
version = "0.1.0"
description = "Template for python project"
requires-python = ">=3.12"
dependencies = [
    "bs4>=0.0.2",
    "fake-useragent>=2.2.0",
    "pandas>=2.3.3",
    "pre-commit>=4.4.0",
    "requests>=2.32.5",
]

[tool.uv]
dev-dependencies = [
    "ruff>=0.14.4",
]
